# fetch3_nhl

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  Derek_data_test30Min.csv  FETCH2_config.py  FETCH2_loading_LAD.py  FETCH2_run_LAD.py  LICENSE  NHL_functions.py  Precipitation_Verma.csv  README.md  boa.sh  canopy.py  changelog.html  developer_guide.html  environment.yml  environment_dev_update.yml  example_model_output.ipynb  fetch3_requirements.yml  fetch3_requirements_m1.yml  fetch3_requirements_macx86.yml  gen_fetch3.html  genindex.html  getting_started.html  git_stuff.html  index.html  initial_conditions.py  jarvis.py  main.py  main_standalone.py  met_data.py  met_data_derek.py  met_data_nhl.py  model_config.html  model_config.py  model_config.yml  model_functions.py  (+29 more)
_sources/: developer_guide.rst.txt  getting_started.rst.txt  index.rst.txt  quick_reference.rst.txt  roadmap.rst.txt
config_files/: config_umbs_oak_10.yml  config_umbs_oak_5.yml  config_umbs_oak_5_opt.yml  model_config.yml  model_config_PM.yml  opt_config_aspen_v2.yml  opt_config_maple_v2.yml  opt_config_ms.yml  opt_config_pine_v2.yml  opt_model_config.yml  opt_umbs_M8.yml  opt_umbs_O6.yml  opt_umbs_aspen_avg.yml  opt_umbs_birch_avg.yml  opt_umbs_m8_long.yml  opt_umbs_maple_avg.yml  opt_umbs_oak_avg.yml  opt_umbs_pine_avg.yml  test_param_groups.yml  umbs_config_oak.yml
data/: Derek_data_up.csv  LAD_data.csv  Marcela_data.csv  UMBS_flux_2011_v2.csv
developer_guide/: contributing.html  debugging.html  git_instructions.html  index.html
docs/: conf.py  (+38 more)
(+294 files in other folders)
