[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fetch3"
dynamic = ["version"]
description = ""
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "xarray",
    "dask",
    "bottleneck",
    "ipympl",
    "torch",
    "torchvision",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "flake8",
    "invoke",
    "click",
]

[tool.setuptools]
packages = ["fetch3"]

[tool.setuptools_scm]
write_to = "fetch3/__version__.py"

[tool.setuptools.package-data]
"*" = [
    "*.yml",
    "*.css",
    "*.html"
]


[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = ["*env*/*"]


[tool.black]
line-length = 120
experimental-string-processing = true
# This is a regular expression (hence the \. is escaping the ., and not a literal \.)
exclude = '''
(
    /(\.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | .*env.*
    | _build
    | buck-out
    | build
    | dist
    | docs/*
    )
)
'''
